--- a/css/style.css
+++ b/css/style.css
@@ -359,6 +359,7 @@ button:focus {
   .button img {
     margin: 0 auto; }
   .form-input {
+    width: 100%;
     margin-bottom: 10px; }
   .form-inputs {
     -webkit-box-orient: vertical;
